Next portion of changes

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 204,
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +72,9 @@
     "# needed by Strange Eons.\n",
     "# The second will be placed in the setOCTGN folder, which will be copied over to your OCTGN folder later\n",
     "# in this workbook.\n",
+    "\n",
+    "SETS_RANGE = 'A3:B3'\n",
+    "CARD_DATA_RANGE = 'A2:AU1000'\n",
     "\n",
     "shutil.copyfile(MACROS_PATH, MACROS_COPY_PATH)\n",
     "for folder in next(os.walk(SET_OCTGN_PATH))[1]:\n",
@@ -90,11 +93,17 @@
     "        xlws['ws2a'] = xlwb2.sheets['Sets']\n",
     "        xlws['ws2b'] = xlwb2.sheets['Card Data']\n",
     "\n",
-    "        newVal = xlws['ws1a'].range('A3:B3').value  # get set id/name\n",
-    "        xlws['ws2a'].range('A3:B3').value = newVal  # update set id/name\n",
+    "        newVal = xlws['ws1a'].range(SETS_RANGE).value  # get set id/name\n",
+    "        xlws['ws2a'].range(SETS_RANGE).value = newVal  # update set id/name\n",
     "\n",
-    "        newVal = xlws['ws1b'].range('A2:AW1000').value  # get card data\n",
-    "        xlws['ws2b'].range('A2:AW1000').value = newVal  # update card data\n",
+    "        newVal = xlws['ws1b'].range(CARD_DATA_RANGE).value  # get card data\n",
+    "        xlws['ws2b'].range(CARD_DATA_RANGE).value = newVal  # update card data\n",
+    "\n",
+    "        xlws['ws2b'].range(CARD_DATA_RANGE).api.Sort(\n",
+    "            Key1=xlws['ws2b'].range('Set').api,\n",
+    "            Order1=xw.constants.SortOrder.xlAscending,\n",
+    "            Key2=xlws['ws2b'].range('CardNumber').api,\n",
+    "            Order2=xw.constants.SortOrder.xlAscending)\n",
     "\n",
     "        # This macro will generate a folder under setOCTGN, which which will be copied over\n",
     "        # to OCTGN\\GameDatabase\\a21af4e8-be4b-4cda-a6b6-534f9717391f\\Sets \n",
@@ -114,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,8 +140,8 @@
     "for _, _, filenames in os.walk(conf['artwork_path']):\n",
     "    for filename in filenames:\n",
     "        if filename.split('.')[-1] in ('jpg', 'png'):\n",
-    "            card_id = filename.split('_')[0]\n",
-    "            images[card_id] = filename\n",
+    "            card_id_side = '_'.join(filename.split('_')[:2])\n",
+    "            images[card_id_side] = filename\n",
     "\n",
     "    break\n",
     "\n",
@@ -144,10 +153,10 @@
     "\n",
     "for card in root[0]:\n",
     "    card_type = [p for p in card\n",
-    "                 if p.attrib['name'] == 'Type'\n",
+    "                 if p.attrib.get('name') == 'Type'\n",
     "                ][0].attrib['value']\n",
     "    encounter_set = [p for p in card\n",
-    "                     if p.attrib['name'] == 'Encounter Set']\n",
+    "                     if p.attrib.get('name') == 'Encounter Set']\n",
     "    if card_type != 'Quest' and encounter_set:\n",
     "        encounter_set = encounter_set[0].attrib['value']\n",
     "        encounter_cards[card.attrib['id']] = encounter_set\n",
@@ -155,27 +164,46 @@
     "        prop.set('name', 'Encounter Set Number')\n",
     "        prop.set('value', str(encounter_sets.get(encounter_set, 0) + 1))\n",
     "        quantity = int([p for p in card\n",
-    "                        if p.attrib['name'] == 'Quantity'\n",
+    "                        if p.attrib.get('name') == 'Quantity'\n",
     "                       ][0].attrib['value'])\n",
     "        encounter_sets[encounter_set] = encounter_sets.get(encounter_set, 0) + quantity\n",
     "\n",
-    "    filename = images.get(card.attrib['id'])\n",
-    "    if not filename:\n",
-    "        continue\n",
-    "\n",
-    "    shutil.copyfile(os.path.join(conf['artwork_path'], filename),\n",
-    "                    os.path.join(IMAGES_PATH, filename))\n",
-    "    prop = ET.SubElement(card, 'property')\n",
-    "    prop.set('name', 'Artwork')\n",
-    "    prop.set('value', filename)\n",
-    "\n",
-    "    is_artist = [p for p in card if p.attrib['name'] == 'Artist']\n",
-    "    if not is_artist and '_Artist_' in filename:\n",
-    "        artist = '.'.join('_Artist_'.join(\n",
-    "            filename.split('_Artist_')[1:]).split('.')[:-1]).replace('_', ' ')\n",
+    "    filename = images.get('{}_{}'.format(card.attrib['id'], 'A'))\n",
+    "    if filename:\n",
+    "        shutil.copyfile(os.path.join(conf['artwork_path'], filename),\n",
+    "                        os.path.join(IMAGES_PATH, filename))\n",
     "        prop = ET.SubElement(card, 'property')\n",
-    "        prop.set('name', 'Artist')\n",
-    "        prop.set('value', artist)\n",
+    "        prop.set('name', 'Artwork')\n",
+    "        prop.set('value', filename)\n",
+    "\n",
+    "        artist = [p for p in card if p.attrib.get('name') == 'Artist']\n",
+    "        if not artist and '_Artist_' in filename:\n",
+    "            artist_value = '.'.join('_Artist_'.join(\n",
+    "                filename.split('_Artist_')[1:]).split('.')[:-1]).replace('_', ' ')\n",
+    "            prop = ET.SubElement(card, 'property')\n",
+    "            prop.set('name', 'Artist')\n",
+    "            prop.set('value', artist_value)\n",
+    "\n",
+    "    filename = images.get('{}_{}'.format(card.attrib['id'], 'B'))\n",
+    "    alternate = [a for a in card if a.attrib.get('type') == 'B']\n",
+    "    if filename and alternate:\n",
+    "        alternate = alternate[0]\n",
+    "        shutil.copyfile(os.path.join(conf['artwork_path'], filename),\n",
+    "                        os.path.join(IMAGES_PATH, filename))\n",
+    "        prop = ET.SubElement(alternate, 'property')\n",
+    "        prop.set('name', 'Artwork')\n",
+    "        prop.set('value', filename)\n",
+    "\n",
+    "        artist = [p for p in alternate if p.attrib.get('name') == 'Artist']\n",
+    "        if not (artist and artist[0].attrib['value']) and '_Artist_' in filename:\n",
+    "            artist_value = '.'.join('_Artist_'.join(\n",
+    "                filename.split('_Artist_')[1:]).split('.')[:-1]).replace('_', ' ')\n",
+    "            if artist:\n",
+    "                artist[0].set('value', artist_value)\n",
+    "            else:\n",
+    "                prop = ET.SubElement(alternate, 'property')\n",
+    "                prop.set('name', 'Artist')\n",
+    "                prop.set('value', artist_value)\n",
     "\n",
     "for card in root[0]:\n",
     "    if card.attrib['id'] in encounter_cards:\n",
@@ -188,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
