Draft of new changes

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 271,
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,15 +195,12 @@
     "        prop.set('value', filename)\n",
     "\n",
     "        artist = [p for p in alternate if p.attrib.get('name') == 'Artist']\n",
-    "        if not (artist and artist[0].attrib['value']) and '_Artist_' in filename:\n",
+    "        if not artist and '_Artist_' in filename:\n",
     "            artist_value = '.'.join('_Artist_'.join(\n",
     "                filename.split('_Artist_')[1:]).split('.')[:-1]).replace('_', ' ')\n",
-    "            if artist:\n",
-    "                artist[0].set('value', artist_value)\n",
-    "            else:\n",
-    "                prop = ET.SubElement(alternate, 'property')\n",
-    "                prop.set('name', 'Artist')\n",
-    "                prop.set('value', artist_value)\n",
+    "            prop = ET.SubElement(alternate, 'property')\n",
+    "            prop.set('name', 'Artist')\n",
+    "            prop.set('value', artist_value)\n",
     "\n",
     "for card in root[0]:\n",
     "    if card.attrib['id'] in encounter_cards:\n",
@@ -249,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
