Next portion of changes

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -13,17 +13,8 @@
     "import xlwings as xw\n",
     "import xml.etree.ElementTree as ET\n",
     "import yaml\n",
-    "import zipfile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 271,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
+    "import zipfile\n",
+    "\n",
     "PROJECT_FOLDER = 'Frogmorton'\n",
     "SHEET_NAME = 'setExcel'\n",
     "\n",
@@ -42,14 +33,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download the cards spreadsheet from Google Drive\n",
+    "# Read configuration\n",
     "with open(CONFIGURATION_PATH, 'r') as f_conf:\n",
     "    conf = yaml.safe_load(f_conf)\n",
     "\n",
+    "# Download the cards spreadsheet from Google Drive\n",
     "sheet_path = '{}.{}'.format(SHEET_NAME, conf['sheet_type'])\n",
     "if conf['sheet_type'] == 'xlsm':\n",
     "    url = 'https://drive.google.com/uc?export=download&id={}'.format(conf['sheet_gdid'])\n",
@@ -63,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
