Next portion of changes

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 388,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#SET_UUID = '8a3273ca-1ccd-4e07-913b-766fcc49fe6f'\n",
+    "SET_UUID = '17b90ca1-7e3e-4891-99da-954a7833e88e'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 389,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +75,13 @@
     "# The second will be placed in the setOCTGN folder, which will be copied over to your OCTGN folder later\n",
     "# in this workbook.\n",
     "\n",
-    "SETS_RANGE = 'A3:B3'\n",
-    "CARD_DATA_RANGE = 'A2:AU1000'\n",
+    "CARD_DATA_RANGE = 'A2:AU1001'\n",
     "\n",
     "shutil.copyfile(MACROS_PATH, MACROS_COPY_PATH)\n",
     "for folder in next(os.walk(SET_OCTGN_PATH))[1]:\n",
     "    shutil.rmtree(os.path.join(SET_OCTGN_PATH, folder))\n",
     "\n",
-    "app = xw.App(visible=False)  # IF YOU WANT EXCEL TO RUN IN BACKGROUND\n",
+    "app = xw.App(visible=False)  # if you want Excel to run in background\n",
     "xlws = {}\n",
     "\n",
     "xlwb1 = xw.Book(sheet_path)\n",
@@ -80,42 +89,52 @@
     "    xlws['ws1a'] = xlwb1.sheets['Sets']\n",
     "    xlws['ws1b'] = xlwb1.sheets['Card Data']\n",
     "\n",
-    "    xlwb2 = xw.Book(MACROS_COPY_PATH)\n",
-    "    try:\n",
-    "        xlws['ws2a'] = xlwb2.sheets['Sets']\n",
-    "        xlws['ws2b'] = xlwb2.sheets['Card Data']\n",
+    "    set_row = None\n",
+    "    for row in range(3, 102):\n",
+    "        if xlws['ws1a'].range((row, 1)).value == SET_UUID:\n",
+    "            set_row = row\n",
+    "            break\n",
     "\n",
-    "        newVal = xlws['ws1a'].range(SETS_RANGE).value  # get set id/name\n",
-    "        xlws['ws2a'].range(SETS_RANGE).value = newVal  # update set id/name\n",
+    "    if set_row:\n",
+    "        \n",
+    "        xlwb2 = xw.Book(MACROS_COPY_PATH)\n",
+    "        try:\n",
+    "            xlws['ws2a'] = xlwb2.sheets['Sets']\n",
+    "            xlws['ws2b'] = xlwb2.sheets['Card Data']\n",
     "\n",
-    "        newVal = xlws['ws1b'].range(CARD_DATA_RANGE).value  # get card data\n",
-    "        xlws['ws2b'].range(CARD_DATA_RANGE).value = newVal  # update card data\n",
+    "            newVal = xlws['ws1a'].range('A{}:B{}'.format(set_row, set_row)).value  # get set id/name\n",
+    "            xlws['ws2a'].range('A3:B3').value = newVal  # update set id/name\n",
     "\n",
-    "        xlws['ws2b'].range(CARD_DATA_RANGE).api.Sort(\n",
-    "            Key1=xlws['ws2b'].range('Set').api,\n",
-    "            Order1=xw.constants.SortOrder.xlAscending,\n",
-    "            Key2=xlws['ws2b'].range('CardNumber').api,\n",
-    "            Order2=xw.constants.SortOrder.xlAscending)\n",
+    "            newVal = xlws['ws1b'].range(CARD_DATA_RANGE).value  # get card data\n",
+    "            xlws['ws2b'].range(CARD_DATA_RANGE).value = newVal  # update card data\n",
     "\n",
-    "        # This macro will generate a folder under setOCTGN, which which will be copied over\n",
-    "        # to OCTGN\\GameDatabase\\a21af4e8-be4b-4cda-a6b6-534f9717391f\\Sets \n",
-    "        macro1 = xlwb2.macro('SaveOCTGN')\n",
-    "        macro1()\n",
+    "            xlws['ws2b'].range(CARD_DATA_RANGE).api.Sort(\n",
+    "                Key1=xlws['ws2b'].range('Set').api,\n",
+    "                Order1=xw.constants.SortOrder.xlAscending,\n",
+    "                Key2=xlws['ws2b'].range('CardNumber').api,\n",
+    "                Order2=xw.constants.SortOrder.xlAscending)\n",
     "\n",
-    "        # This macro will generate a file called setEons.xml, which is used by the Strange Eons scripts.\n",
-    "        macro2 = xlwb2.macro('SaveXML')\n",
-    "        macro2()\n",
+    "            # This macro will generate a folder under setOCTGN, which which will be copied over\n",
+    "            # to OCTGN\\GameDatabase\\a21af4e8-be4b-4cda-a6b6-534f9717391f\\Sets \n",
+    "            macro1 = xlwb2.macro('SaveOCTGN')\n",
+    "            macro1()\n",
     "\n",
-    "        xlwb2.save()\n",
-    "    finally:\n",
-    "        xlwb2.close()\n",
+    "            # This macro will generate a file called setEons.xml, which is used by the Strange Eons scripts.\n",
+    "            macro2 = xlwb2.macro('SaveXML')\n",
+    "            macro2()\n",
+    "\n",
+    "            xlwb2.save()\n",
+    "        finally:\n",
+    "            xlwb2.close()\n",
+    "    else:\n",
+    "        print('Set {} not found in the spreadsheet'.format(SET_UUID))    \n",
     "finally:\n",
     "    xlwb1.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,20 +252,27 @@
     "  - Exclude simple back faces\n",
     "  - leave all other checkboxes unchecked\n",
     "\n",
+    "    Note: Sometimes after running the script, Strange Eons reports `Decks/new` folder as empty and doesn't provide\n",
+    "    the \"Bulk Export\" option.  In that case, close Strange Eons and reopen it again.\n",
+    "\n",
     "4. Once complete, close Strange Eons."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create an image folder if it doesn't exist yet\n",
+    "if not os.path.exists(os.path.join(OUTPUT_EONS_PATH, SET_UUID)):\n",
+    "    os.mkdir(os.path.join(OUTPUT_EONS_PATH, SET_UUID))\n",
+    "\n",
     "# Delete old image files\n",
-    "for _, _, filenames in os.walk(OUTPUT_EONS_PATH):\n",
+    "for _, _, filenames in os.walk(os.path.join(OUTPUT_EONS_PATH, SET_UUID)):\n",
     "    for filename in filenames:\n",
     "        if filename.split('.')[-1] in ('jpg', 'png'):\n",
-    "            os.remove(os.path.join(OUTPUT_EONS_PATH, filename))\n",
+    "            os.remove(os.path.join(OUTPUT_EONS_PATH, SET_UUID, filename))\n",
     "\n",
     "    break\n",
     "\n",
@@ -256,25 +282,26 @@
     "                and f.split('.')[-1] in ('jpg', 'png')]\n",
     "    for filename in filelist:\n",
     "        output_filename = os.path.split(filename)[-1]\n",
+    "        output_filename = re.sub('-2-1(?=\\.(?:jpg|png)$)', '-2', output_filename)\n",
     "        parts = output_filename.split('-')\n",
     "        if parts[1] == 'p':\n",
     "            for i in range(1, 4):\n",
     "                parts[1] = str(i)\n",
     "                output_filename = '-'.join(parts)\n",
     "                with zip_obj.open(filename) as zip_file:\n",
-    "                    with open(os.path.join(OUTPUT_EONS_PATH,\n",
+    "                    with open(os.path.join(OUTPUT_EONS_PATH, SET_UUID,\n",
     "                              output_filename), 'wb') as output_file:\n",
     "                        shutil.copyfileobj(zip_file, output_file)\n",
     "        else:\n",
     "            with zip_obj.open(filename) as zip_file:\n",
-    "                with open(os.path.join(OUTPUT_EONS_PATH,\n",
+    "                with open(os.path.join(OUTPUT_EONS_PATH, SET_UUID,\n",
     "                          output_filename), 'wb') as output_file:\n",
     "                    shutil.copyfileobj(zip_file, output_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,12 +312,12 @@
     "pack_path = os.path.join(OUTPUT_OCTGN_PATH, 'imagePack_{}.o8c'.format(octgnid))\n",
     "known_filenames = set()\n",
     "with zipfile.ZipFile(pack_path, 'w', zipfile.ZIP_DEFLATED) as zip_obj:\n",
-    "    for _, _, filenames in os.walk(OUTPUT_EONS_PATH):\n",
+    "    for _, _, filenames in os.walk(os.path.join(OUTPUT_EONS_PATH, SET_UUID)):\n",
     "        for filename in filenames:\n",
     "            if filename.split('.')[-1] not in ('jpg', 'png'):\n",
     "                continue\n",
     "\n",
-    "            oldfile = os.path.join(OUTPUT_EONS_PATH, filename)\n",
+    "            oldfile = os.path.join(OUTPUT_EONS_PATH, SET_UUID, filename)\n",
     "            parts = filename.split('.')\n",
     "            parts[0] = re.sub('-1$', '', re.sub('-2$', '.B', parts[0]))\n",
     "            filename = '.'.join(parts)\n",
