Next portion of changes

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,20 +37,28 @@
     "OUTPUT_EONS_PATH = 'imagesEons'\n",
     "OUTPUT_OCTGN_PATH = ''\n",
     "PROJECT_PATH = 'setGenerator.seproject'\n",
-    "SET_EONS_PATH = 'setEons.xml'\n",
-    "SET_OCTGN_PATH = 'setOCTGN'"
+    "SET_EONS_PATH = 'setEons'\n",
+    "SET_OCTGN_PATH = 'setOCTGN'\n",
+    "XML_PATH = os.path.join(PROJECT_FOLDER, 'XML')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read configuration\n",
     "with open(CONFIGURATION_PATH, 'r') as f_conf:\n",
-    "    conf = yaml.safe_load(f_conf)\n",
-    "\n",
+    "    conf = yaml.safe_load(f_conf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 431,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download the cards spreadsheet from Google Drive\n",
     "sheet_path = '{}.{}'.format(SHEET_NAME, conf['sheet_type'])\n",
     "if conf['sheet_type'] == 'xlsm':\n",
@@ -65,12 +73,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Copy Excel Sheet over to sheet that contains the macros, and run the macros\n",
-    "# This will create two .xml files. One in the main directory called setEons.xml, which contains the card data\n",
+    "# This will create two .xml files. One in the setEons folder called setEons.xml, which contains the card data\n",
     "# needed by Strange Eons.\n",
     "# The second will be placed in the setOCTGN folder, which will be copied over to your OCTGN folder later\n",
     "# in this workbook.\n",
@@ -78,8 +86,6 @@
     "CARD_DATA_RANGE = 'A2:AU1001'\n",
     "\n",
     "shutil.copyfile(MACROS_PATH, MACROS_COPY_PATH)\n",
-    "for folder in next(os.walk(SET_OCTGN_PATH))[1]:\n",
-    "    shutil.rmtree(os.path.join(SET_OCTGN_PATH, folder))\n",
     "\n",
     "app = xw.App(visible=False)  # if you want Excel to run in background\n",
     "xlws = {}\n",
@@ -119,7 +125,7 @@
     "            macro1 = xlwb2.macro('SaveOCTGN')\n",
     "            macro1()\n",
     "\n",
-    "            # This macro will generate a file called setEons.xml, which is used by the Strange Eons scripts.\n",
+    "            # This macro will generate a file called setEons.xml, which is used by the Strange Eons script.\n",
     "            macro2 = xlwb2.macro('SaveXML')\n",
     "            macro2()\n",
     "\n",
@@ -134,10 +140,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 439,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Frogmorton\\\\XML\\\\setEons.xml'"
+      ]
+     },
+     "execution_count": 439,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Find properties with a given name\n",
+    "def find_properties(parent, name):\n",
+    "    return [p for p in parent if p.attrib.get('name') == name]\n",
+    "\n",
+    "# Get new or existing property with a given name\n",
+    "def get_property(parent, name):\n",
+    "    properties = find_properties(parent, name)\n",
+    "    if properties:\n",
+    "        prop = properties[0]\n",
+    "    else:\n",
+    "        prop = ET.SubElement(parent, 'property')\n",
+    "        prop.set('name', name)\n",
+    "\n",
+    "    return prop\n",
+    "\n",
     "# Delete old image files\n",
     "for _, _, filenames in os.walk(IMAGES_PATH):\n",
     "    for filename in filenames:\n",
@@ -156,43 +188,35 @@
     "\n",
     "    break\n",
     "\n",
-    "# Copy artwork images and update generated XML with filenames and encounter set numbers\n",
-    "tree = ET.parse(SET_EONS_PATH)\n",
+    "# Copy artwork images into the project and update setEons.xml with filenames, artists and encounter set numbers\n",
+    "tree = ET.parse(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml'))\n",
     "root = tree.getroot()\n",
     "encounter_sets = {}\n",
     "encounter_cards = {}\n",
     "\n",
     "for card in root[0]:\n",
-    "    card_type = [p for p in card\n",
-    "                 if p.attrib.get('name') == 'Type'\n",
-    "                ][0].attrib['value']\n",
-    "    encounter_set = [p for p in card\n",
-    "                     if p.attrib.get('name') == 'Encounter Set']\n",
+    "    card_type = find_properties(card, 'Type')[0].attrib['value']\n",
+    "    encounter_set = find_properties(card, 'Encounter Set')\n",
     "    if card_type != 'Quest' and encounter_set:\n",
     "        encounter_set = encounter_set[0].attrib['value']\n",
     "        encounter_cards[card.attrib['id']] = encounter_set\n",
-    "        prop = ET.SubElement(card, 'property')\n",
-    "        prop.set('name', 'Encounter Set Number')\n",
+    "        prop = get_property(card, 'Encounter Set Number')\n",
     "        prop.set('value', str(encounter_sets.get(encounter_set, 0) + 1))\n",
-    "        quantity = int([p for p in card\n",
-    "                        if p.attrib.get('name') == 'Quantity'\n",
-    "                       ][0].attrib['value'])\n",
+    "        quantity = int(find_properties(card, 'Quantity')[0].attrib['value'])\n",
     "        encounter_sets[encounter_set] = encounter_sets.get(encounter_set, 0) + quantity\n",
     "\n",
     "    filename = images.get('{}_{}'.format(card.attrib['id'], 'A'))\n",
     "    if filename:\n",
     "        shutil.copyfile(os.path.join(conf['artwork_path'], filename),\n",
     "                        os.path.join(IMAGES_PATH, filename))\n",
-    "        prop = ET.SubElement(card, 'property')\n",
-    "        prop.set('name', 'Artwork')\n",
+    "        prop = get_property(card, 'Artwork')\n",
     "        prop.set('value', filename)\n",
     "\n",
-    "        artist = [p for p in card if p.attrib.get('name') == 'Artist']\n",
+    "        artist = find_properties(card, 'Artist')\n",
     "        if not artist and '_Artist_' in filename:\n",
     "            artist_value = '.'.join('_Artist_'.join(\n",
     "                filename.split('_Artist_')[1:]).split('.')[:-1]).replace('_', ' ')\n",
-    "            prop = ET.SubElement(card, 'property')\n",
-    "            prop.set('name', 'Artist')\n",
+    "            prop = get_property(card, 'Artist')\n",
     "            prop.set('value', artist_value)\n",
     "\n",
     "    filename = images.get('{}_{}'.format(card.attrib['id'], 'B'))\n",
@@ -201,34 +225,35 @@
     "        alternate = alternate[0]\n",
     "        shutil.copyfile(os.path.join(conf['artwork_path'], filename),\n",
     "                        os.path.join(IMAGES_PATH, filename))\n",
-    "        prop = ET.SubElement(alternate, 'property')\n",
-    "        prop.set('name', 'Artwork')\n",
+    "        prop = get_property(alternate, 'Artwork')\n",
     "        prop.set('value', filename)\n",
     "\n",
-    "        artist = [p for p in alternate if p.attrib.get('name') == 'Artist']\n",
+    "        artist = find_properties(alternate, 'Artist')\n",
     "        if not artist and '_Artist_' in filename:\n",
     "            artist_value = '.'.join('_Artist_'.join(\n",
     "                filename.split('_Artist_')[1:]).split('.')[:-1]).replace('_', ' ')\n",
-    "            prop = ET.SubElement(alternate, 'property')\n",
-    "            prop.set('name', 'Artist')\n",
+    "            prop = get_property(alternate, 'Artist')\n",
     "            prop.set('value', artist_value)\n",
     "\n",
     "for card in root[0]:\n",
     "    if card.attrib['id'] in encounter_cards:\n",
-    "        prop = ET.SubElement(card, 'property')\n",
-    "        prop.set('name', 'Encounter Set Total')\n",
+    "        prop = get_property(card, 'Encounter Set Total')\n",
     "        prop.set('value', str(encounter_sets[encounter_cards[card.attrib['id']]]))\n",
     "\n",
-    "tree.write(SET_EONS_PATH)"
+    "tree.write(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml'))\n",
+    "\n",
+    "# Copy setEons.xml into the project\n",
+    "shutil.copyfile(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml'),\n",
+    "                os.path.join(XML_PATH, 'setEons.xml'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 440,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create Strange Eons project\n",
+    "# Create Strange Eons project archive\n",
     "with zipfile.ZipFile(PROJECT_PATH, 'w') as zip_obj:\n",
     "    for root, _, filenames in os.walk(PROJECT_FOLDER):\n",
     "        for filename in filenames:\n",
@@ -260,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 441,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 442,
    "metadata": {},
    "outputs": [],
    "source": [
