--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -1,18 +1,25 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 437,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#SET_UUID = '8a3273ca-1ccd-4e07-913b-766fcc49fe6f'\n",
-    "SET_UUID = '17b90ca1-7e3e-4891-99da-954a7833e88e'"
+    "At the moment, all the scripts work with only one set a time.  Set the correct UUID below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SET_UUID = '8a3273ca-1ccd-4e07-913b-766fcc49fe6f'\n",
+    "#SET_UUID = '17b90ca1-7e3e-4891-99da-954a7833e88e'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,20 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Frogmorton\\\\XML\\\\setEons.xml'"
-      ]
-     },
-     "execution_count": 439,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Find properties with a given name\n",
     "def find_properties(parent, name):\n",
@@ -249,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,17 +271,17 @@
     "  - 90%\n",
     "  - 300 ppi\n",
     "  - Exclude simple back faces\n",
-    "  - leave all other checkboxes unchecked\n",
+    "  - Leave all other checkboxes unchecked\n",
     "\n",
-    "    Note: Sometimes after running the script, Strange Eons reports `Decks/new` folder as empty and doesn't provide\n",
-    "    the \"Bulk Export\" option.  In that case, close Strange Eons and reopen it again.\n",
+    "  Note: Sometimes after running the script, Strange Eons reports `Decks/new` folder as empty and doesn't provide\n",
+    "  the \"Bulk Export\" option.  In that case, close Strange Eons and reopen it again.\n",
     "\n",
     "4. Once complete, close Strange Eons."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
