Export inside the script

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Setup\n",
+    "\n",
     "At the moment, all the scripts work with only one set a time.  Set the correct UUID below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,9 +149,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Frogmorton\\\\XML\\\\setEons.xml'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Find properties with a given name\n",
     "def find_properties(parent, name):\n",
@@ -245,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,27 +274,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Strange Eons part:\n",
+    "### Strange Eons Part:\n",
     "\n",
-    "1. Open the `setGenerator.seproject` generated above.\n",
-    "2. Run the `makeCards` script by double clicking it (see `Script` folder).  This will take the templates, fill them with the values from the `setEons.xml` generated above, and save them under the `Decks/new` folder in Strange Eons.\n",
-    "3. Right-click the `Decks/new` folder, click on \"Bulk Export\", set the following values and hit \"Export\":\n",
-    "\n",
-    "  - JPG\n",
-    "  - 90%\n",
-    "  - 300 ppi\n",
-    "  - Exclude simple back faces\n",
-    "  - Leave all other checkboxes unchecked\n",
-    "\n",
-    "  Note: Sometimes after running the script, Strange Eons reports `Decks/new` folder as empty and doesn't provide\n",
-    "  the \"Bulk Export\" option.  In that case, close Strange Eons and reopen it again.\n",
-    "\n",
-    "4. Once complete, close Strange Eons."
+    "1. Open `setGenerator.seproject` generated above.\n",
+    "2. Run `Script/makeCards` script by double clicking it.  This will take the templates, fill them with values from `setEons.xml` and export results in all required formats into `Decks/new` folder inside Strange Eons.\n",
+    "3. Once completed, close Strange Eons."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
