--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -4,14 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setup\n",
-    "\n",
-    "At the moment, all the scripts work with only one set a time.  Set the correct UUID below."
+    "At the moment, all the scripts work with only one card set.  Set the correct UUID below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +18,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the cells below:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,20 +154,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Frogmorton\\\\XML\\\\setEons.xml'"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Find properties with a given name\n",
     "def find_properties(parent, name):\n",
@@ -258,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,8 +276,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the cells below:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,8 +353,13 @@
     "                newfile = '{}/{}/Cards/{}'.format(OCTGN_ZIP_PATH, octgnid, filename)\n",
     "                zip_obj.write(oldfile, newfile)\n",
     "\n",
-    "        break\n",
-    "\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Now there should be an imagePack_<octgnid>.o8c file.\n",
     "# Open that using the \"Add Image Packs\" button from within OCTGN to add it."
    ]
